Alerter: migration to Maven